# lib-exchange-client

./: Mitch block  README.md  specification.yaml
android/: README.md  build.gradle  pom.xml
android/docs/: Balance.md  BalanceMap.md  BaseOrder.md  CancelOrderRequest.md  CreateWithdrawalRequest.md  DepositAddressCrypto.md  DepositInfo.md  Fees.md  OrdType.md  OrderBook.md  OrderBookEntry.md  OrderStatus.md  OrderSummary.md  PaymentsApi.md  PriceEvent.md  PriceEventList.md  Side.md  SymbolStatus.md  TimeInForce.md  TimeInForceStop.md  TradingApi.md  UnauthenticatedApi.md  UnauthorizedError.md  WhitelistEntry.md  WithdrawalInfo.md  WithdrawalStatus.md
c/: CMakeLists.txt  README.md
c/api/: PaymentsAPI.c  PaymentsAPI.h  TradingAPI.c  TradingAPI.h  UnauthenticatedAPI.c  UnauthenticatedAPI.h
c/include/: apiClient.h
c/model/: balance.c  balance.h  balance_map.c  balance_map.h  base_order.c  base_order.h  cancel_order_request.c  cancel_order_request.h  create_withdrawal_request.c  create_withdrawal_request.h  deposit_address_crypto.c  deposit_address_crypto.h  deposit_info.c  deposit_info.h  fees.c  fees.h  ord_type.c  ord_type.h  order_book.c  order_book.h  order_book_entry.c  order_book_entry.h  order_status.c  order_status.h  order_summary.c  order_summary.h  price_event.c  price_event.h  price_event_list.c  price_event_list.h  side.c  side.h  symbol_status.c  symbol_status.h  time_in_force.c  time_in_force.h  time_in_force_stop.c  time_in_force_stop.h  unauthorized_error.c  unauthorized_error.h  (+6 more)
c/src/: apiClient.c
c/unit-test/: test_balance.c  test_balance_map.c  test_base_order.c  test_cancel_order_request.c  test_create_withdrawal_request.c  test_deposit_address_crypto.c  test_deposit_info.c  test_fees.c  test_ord_type.c  test_order_book.c  test_order_book_entry.c  test_order_status.c  test_order_summary.c  test_price_event.c  test_price_event_list.c  test_side.c  test_symbol_status.c  test_time_in_force.c  test_time_in_force_stop.c  test_unauthorized_error.c  test_whitelist_entry.c  test_withdrawal_info.c  test_withdrawal_status.c
clojure/: project.clj
csharp/: Org.OpenAPITools.sln  README.md
csharp/docs/: Balance.md  BalanceMap.md  BaseOrder.md  CancelOrderRequest.md  CreateWithdrawalRequest.md  DepositAddressCrypto.md  DepositInfo.md  Fees.md  OrdType.md  OrderBook.md  OrderBookEntry.md  OrderStatus.md  OrderSummary.md  PaymentsApi.md  PriceEvent.md  PriceEventList.md  Side.md  SymbolStatus.md  TimeInForce.md  TimeInForceStop.md  TradingApi.md  UnauthenticatedApi.md  UnauthorizedError.md  WhitelistEntry.md  WithdrawalInfo.md  WithdrawalStatus.md
elm/: README.md
go/: README.md  api_payments.go  api_trading.go  api_unauthenticated.go  client.go  configuration.go  model_balance.go  model_balance_map.go  model_base_order.go  model_cancel_order_request.go  model_create_withdrawal_request.go  model_deposit_address_crypto.go  model_deposit_info.go  model_fees.go  model_ord_type.go  model_order_book.go  model_order_book_entry.go  model_order_status.go  model_order_summary.go  model_price_event.go  model_price_event_list.go  model_side.go  model_symbol_status.go  model_time_in_force.go  model_time_in_force_stop.go  model_unauthorized_error.go  model_whitelist_entry.go  model_withdrawal_info.go  model_withdrawal_status.go  response.go
go/api/: openapi.yaml
go/docs/: Balance.md  BalanceMap.md  BaseOrder.md  CancelOrderRequest.md  CreateWithdrawalRequest.md  DepositAddressCrypto.md  DepositInfo.md  Fees.md  OrderBook.md  (+12 more)
haskell-http-client/: README.md  blockchain.com-exchange-rest.cabal  openapi.yaml
javascript/: README.md  package.json
kotlin/: .openapi-generator-ignore  README.md  build.gradle  build.sbt  pom.xml
php/: README.md  composer.json  phpunit.xml.dist
python/: .openapi-generator-ignore  README.md  setup.py
rust/: README.md
typescript-axios/: api.ts  base.ts  configuration.ts  index.ts
(+545 files in other folders)
